--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="background_color">#EEEEEE</color>
+    <color name="background_color">#f5f5f5</color>
+    <color name="background_color2">#ECF1FA</color>
+    <color name="light_blue">#50B2CC</color>
+    <color name="dark_blue">#057C82</color>
+    <color name="text_color1">#444444</color>
 </resources>
